--- a/src/libs/H.ReactiveUI.CommonInteractions.Core/H.ReactiveUI.CommonInteractions.Core.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Core/H.ReactiveUI.CommonInteractions.Core.csproj
@@ -1,8 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net4.0;net4.5</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net4.6.1</TargetFrameworks>
     <RootNamespace>H.ReactiveUI.CommonInteractions</RootNamespace>
+	<NoWarn>$(NoWarn);CA1819;CA1014;CS8002</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ReactiveUI" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup Label="GlobalUsings">
+    <Using Include="System.Reactive" />
+    <Using Include="System.Reactive.Disposables" />
+    <Using Include="System.Reactive.Linq" />
+    <Using Include="ReactiveUI" />
+  </ItemGroup>
+	
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net4.6.1' ">
+    <Reference Include="System.Net.Http" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+  </ItemGroup>
 
 </Project>
