--- a/src/libs/H.ReactiveUI.CommonInteractions.Wpf/H.ReactiveUI.CommonInteractions.Wpf.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Wpf/H.ReactiveUI.CommonInteractions.Wpf.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net4.0;net4.5;net5.0-windows;net6.0-windows</TargetFrameworks>
+    <TargetFrameworks>net4.6.1;net5.0-windows;net6.0-windows</TargetFrameworks>
 	<UseWPF>true</UseWPF>
-    <RootNamespace>H.ReactiveUI.CommonInteractions</RootNamespace>
     <DefineConstants>$(DefineConstants);WPF_APP</DefineConstants>
+	<NoWarn>$(NoWarn);CA1014;CA5394</NoWarn>
   </PropertyGroup>
 
   <Import Project="..\..\shared\H.ReactiveUI.CommonInteractions.Shared\H.ReactiveUI.CommonInteractions.Shared.projitems" Label="Shared" />
