fix: Fixed warnings.

--- a/src/libs/H.ReactiveUI.CommonInteractions.Uwp/H.ReactiveUI.CommonInteractions.Uwp.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Uwp/H.ReactiveUI.CommonInteractions.Uwp.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>uap10.0.19041</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
+	<DefineConstants>$(DefineConstants);UWP</DefineConstants>
+	<NoWarn>$(NoWarn);CA1014</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
