--- a/src/libs/H.ReactiveUI.CommonInteractions.Uno/H.ReactiveUI.CommonInteractions.Uno.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Uno/H.ReactiveUI.CommonInteractions.Uno.csproj
@@ -2,8 +2,10 @@
 
   <PropertyGroup>
 	<!--;net6.0-maccatalyst;net6.0-android;net6.0-ios;net6.0-macos-->
-    <TargetFrameworks>MonoAndroid10.0;xamarinios10;netstandard2.0;xamarinmac20</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;MonoAndroid10.0;xamarinios10;xamarinmac20</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
+	<DefineConstants>$(DefineConstants);Uno</DefineConstants>
+	<NoWarn>$(NoWarn);CA1014;CS8002;Uno0001</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
