fix: Fixed CS8002.

--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="Signing">
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>$(SolutionDir)src\key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   
