--- a/src/libs/H.ReactiveUI.CommonInteractions.Uno/H.ReactiveUI.CommonInteractions.Uno.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Uno/H.ReactiveUI.CommonInteractions.Uno.csproj
@@ -5,7 +5,7 @@
     <TargetFrameworks>netstandard2.0;MonoAndroid10.0;xamarinios10;xamarinmac20</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
 	<DefineConstants>$(DefineConstants);Uno</DefineConstants>
-	<NoWarn>$(NoWarn);CA1014;CS8002;Uno0001</NoWarn>
+	<NoWarn>$(NoWarn);CA1014;Uno0001</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
