feat: Added SaveOpenFile support for Drop files.

--- a/src/libs/H.ReactiveUI.CommonInteractions.Uwp/H.ReactiveUI.CommonInteractions.Uwp.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Uwp/H.ReactiveUI.CommonInteractions.Uwp.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>uap10.0.19041</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
 	<DefineConstants>$(DefineConstants);UWP</DefineConstants>
+	<NoWarn>$(NoWarn);CA1822</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
