--- a/src/libs/H.ReactiveUI.CommonInteractions.Uno/H.ReactiveUI.CommonInteractions.Uno.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Uno/H.ReactiveUI.CommonInteractions.Uno.csproj
@@ -1,15 +1,20 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
 
   <PropertyGroup>
-	<!--;net6.0-maccatalyst;net6.0-android;net6.0-ios;net6.0-macos-->
+    <!--net6.0-ios;net6.0-android31.0;net6.0-macos;net6.0-maccatalyst;-->
     <TargetFrameworks>netstandard2.0;MonoAndroid10.0;xamarinios10;xamarinmac20</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
-	<DefineConstants>$(DefineConstants);Uno</DefineConstants>
-	<NoWarn>$(NoWarn);Uno0001;CA1822</NoWarn>
+    <DefineConstants>$(DefineConstants);HAS_UNO</DefineConstants>
+    <NoWarn>$(NoWarn);Uno0001;CA1822</NoWarn>
   </PropertyGroup>
 
+  <ItemGroup Label="GlobalUsings">
+    <Using Include="Windows.UI.Xaml" />
+    <Using Include="Windows.UI.Xaml.Controls" />
+  </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="3.4.0" />
+    <PackageReference Include="Uno.UI" Version="3.10.7" />
   </ItemGroup>
 
   <ItemGroup>
