--- a/src/libs/H.ReactiveUI.CommonInteractions.Wpf/H.ReactiveUI.CommonInteractions.Wpf.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Wpf/H.ReactiveUI.CommonInteractions.Wpf.csproj
@@ -2,15 +2,20 @@
 
   <PropertyGroup>
     <TargetFrameworks>net4.6.1;net5.0-windows;net6.0-windows</TargetFrameworks>
-	<UseWPF>true</UseWPF>
-    <DefineConstants>$(DefineConstants);WPF</DefineConstants>
-	<NoWarn>$(NoWarn);CA5394</NoWarn>
+    <UseWPF>true</UseWPF>
+    <DefineConstants>$(DefineConstants);HAS_WPF</DefineConstants>
+    <NoWarn>$(NoWarn);CA5394</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup Label="GlobalUsings">
+    <Using Include="System.Windows" />
+    <Using Include="System.Windows.Controls" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\H.ReactiveUI.CommonInteractions.Core\H.ReactiveUI.CommonInteractions.Core.csproj" />
   </ItemGroup>
 
   <Import Project="..\..\shared\H.ReactiveUI.CommonInteractions.Shared\H.ReactiveUI.CommonInteractions.Shared.projitems" Label="Shared" />
-  
+
 </Project>
