--- a/src/libs/H.ReactiveUI.CommonInteractions.Uno.WinUI/H.ReactiveUI.CommonInteractions.Uno.WinUI.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Uno.WinUI/H.ReactiveUI.CommonInteractions.Uno.WinUI.csproj
@@ -1,20 +1,20 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
 
   <PropertyGroup>
-    <!-- net6.0-ios;net6.0-android31.0;net6.0-macos;net6.0-maccatalyst;-->
+    <!-- net6.0-ios;net6.0-android31.0;net6.0-macos;net6.0-maccatalyst; -->
     <TargetFrameworks>netstandard2.0;MonoAndroid10.0;xamarinios10;xamarinmac20</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
-    <DefineConstants>$(DefineConstants);HAS_UNO</DefineConstants>
+    <DefineConstants>$(DefineConstants);HAS_UNO;HAS_WINUI</DefineConstants>
     <NoWarn>$(NoWarn);Uno0001;CA1822</NoWarn>
   </PropertyGroup>
 
   <ItemGroup Label="GlobalUsings">
-    <Using Include="Windows.UI.Xaml" />
-    <Using Include="Windows.UI.Xaml.Controls" />
+    <Using Include="Microsoft.UI.Xaml" />
+    <Using Include="Microsoft.UI.Xaml.Controls" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="3.4" />
+    <PackageReference Include="Uno.WinUI" Version="3.4" />
   </ItemGroup>
 
   <ItemGroup>
