--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/H.ReactiveUI.CommonInteractions.Apps.Wpf.csproj
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/H.ReactiveUI.CommonInteractions.Apps.Wpf.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ReactiveUI.WPF" Version="16.3.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\libs\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
     <ProjectReference Include="..\..\libs\H.ReactiveUI.CommonInteractions.Wpf\H.ReactiveUI.CommonInteractions.Wpf.csproj" />
   </ItemGroup>
 
