example: Implemented MessageInteractionsViewModel.

--- a/src/libs/H.ReactiveUI.Apps.Core/H.ReactiveUI.Apps.Core.csproj
+++ b/src/libs/H.ReactiveUI.Apps.Core/H.ReactiveUI.Apps.Core.csproj
@@ -5,6 +5,11 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <ItemGroup Label="GlobalUsings">
+    <Using Include="ReactiveUI" />
+    <Using Include="System.Reactive" />
+  </ItemGroup>
+
   <ItemGroup>
     <Using Remove="System.Net.Http" />
   </ItemGroup>
