docs: Updated README and description.

--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -20,7 +20,7 @@
   </PropertyGroup>
   
   <PropertyGroup Label="NuGet">
-    <Description>Common Interactions(like open/save file) for WPF/UWP/Uno platform</Description>
+    <Description>Common ReactiveUI MVVM Level Interactions(like open/save file) for WPF/UWP/Uno platform</Description>
     <Description>
 $(Description)
 $(PACKAGE_RELEASE_NOTES)
