--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,6 +7,7 @@ jobs:
     uses: HavenDV/workflows/.github/workflows/dotnet_build-test-publish.yml@main
     with:
       os: windows-2022
+      project-path: /target:libs
       use-msbuild: true
       # workloads: android ios maccatalyst macos
       windows-sdk-version: 18362
