--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,13 @@ jobs:
     uses: HavenDV/workflows/.github/workflows/dotnet_build-test-publish.yml@main
     with:
       os: windows-2022
-      project-path: /target:libs
+      project-path: 
+        /target:libs\H_ReactiveUI_CommonInteractions_Wpf
+        /target:libs\H_ReactiveUI_CommonInteractions_Uwp
+        /target:libs\H_ReactiveUI_CommonInteractions_WindowsAppSDK
+        /target:libs\H_ReactiveUI_CommonInteractions_Uno_WinUI
+        /target:libs\H_ReactiveUI_CommonInteractions_Uno
+        /target:libs\H_ReactiveUI_CommonInteractions_ProjectReunion
       use-msbuild: true
       # workloads: android ios maccatalyst macos
       windows-sdk-version: 18362
