--- a/src/libs/H.ReactiveUI.CommonInteractions.WindowsAppSDK/H.ReactiveUI.CommonInteractions.WindowsAppSDK.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.WindowsAppSDK/H.ReactiveUI.CommonInteractions.WindowsAppSDK.csproj
@@ -8,15 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0-preview3" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
   </ItemGroup>
-
-  <!-- Workaround for https://github.com/microsoft/WindowsAppSDK/issues/1217 -->
-  <Target Name="FixReferenceCopyLocalPaths" BeforeTargets="ResolvePackageAssets">
-    <ItemGroup>
-      <ReferenceCopyLocalPaths Remove="$(PkgMicrosoft_WindowsAppSDK)\build\..\runtimes\lib\native\AnyCPU\Microsoft.WindowsAppRuntime.Bootstrap.dll"/>
-    </ItemGroup>
-  </Target>
 
   <ItemGroup>
     <ProjectReference Include="..\H.ReactiveUI.CommonInteractions.Core\H.ReactiveUI.CommonInteractions.Core.csproj" />
