--- a/src/libs/H.ReactiveUI.CommonInteractions.Uno.WinUI/H.ReactiveUI.CommonInteractions.Uno.WinUI.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Uno.WinUI/H.ReactiveUI.CommonInteractions.Uno.WinUI.csproj
@@ -5,7 +5,7 @@
     <TargetFrameworks>netstandard2.0;MonoAndroid10.0;xamarinios10;xamarinmac20</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
     <DefineConstants>$(DefineConstants);HAS_UNO;HAS_WINUI</DefineConstants>
-    <NoWarn>$(NoWarn);Uno0001;CA1822</NoWarn>
+    <NoWarn>$(NoWarn);Uno0001;CA1822;CA5394</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
