--- a/src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly/H.ReactiveUI.Apps.Uno.WebAssembly.csproj
+++ b/src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly/H.ReactiveUI.Apps.Uno.WebAssembly.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="ReactiveUI.Uno" Version="16.3.10" />
     <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.0-dev.32" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.0-dev.32" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.0-dev.32" />
     <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.0.0" />
     <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.0.1" />
