--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,6 +14,7 @@ jobs:
         /target:libs\H_ReactiveUI_CommonInteractions_Uwp
         /target:libs\H_ReactiveUI_CommonInteractions_WinUI
         /target:libs\H_ReactiveUI_CommonInteractions_Wpf
+        /target:libs\H_ReactiveUI_CommonInteractions_Avalonia
       use-msbuild: true
       # workloads: android ios maccatalyst macos
       windows-sdk-version: 18362
