--- a/src/libs/H.ReactiveUI.CommonInteractions.Core/H.ReactiveUI.CommonInteractions.Core.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Core/H.ReactiveUI.CommonInteractions.Core.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>netstandard2.0;net4.6.1</TargetFrameworks>
     <RootNamespace>H.ReactiveUI.CommonInteractions</RootNamespace>
     <NoWarn>$(NoWarn);CA1819;CA1014;CS8002</NoWarn>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
