--- a/src/apps/platforms/Uno/H.ReactiveUI.Apps.Uno.WinUI.WebAssembly/H.ReactiveUI.Apps.Uno.WinUI.WebAssembly.csproj
+++ b/src/apps/platforms/Uno/H.ReactiveUI.Apps.Uno.WinUI.WebAssembly/H.ReactiveUI.Apps.Uno.WinUI.WebAssembly.csproj
@@ -43,7 +43,7 @@
     <ProjectReference Include="..\..\..\..\libs\H.ReactiveUI.CommonInteractions.Uno.WinUI\H.ReactiveUI.CommonInteractions.Uno.WinUI.csproj" />
   </ItemGroup>
 
-  <Import Project="..\..\..\H.ReactiveUI.Apps.Shared\H.ReactiveUI.Apps.Shared.projitems" Label="Shared" />
-  <Import Project="..\..\..\H.ReactiveUI.Apps.Uno.Shared\H.ReactiveUI.Apps.Uno.Shared.projitems" Label="Shared" />
+  <Import Project="..\..\H.ReactiveUI.Apps.Shared\H.ReactiveUI.Apps.Shared.projitems" Label="Shared" />
+  <Import Project="..\..\H.ReactiveUI.Apps.Uno.Shared\H.ReactiveUI.Apps.Uno.Shared.projitems" Label="Shared" />
   
 </Project>
