--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -22,12 +22,12 @@
   </PropertyGroup>
   
   <PropertyGroup Label="NuGet">
-    <Description>Common ReactiveUI MVVM Level Interactions(like open/save file) for WPF/UWP/Uno platform</Description>
+    <Description>Common ReactiveUI MVVM Level Interactions(like open/save file) for WPF/UWP/WinUI/Uno/Avalonia platforms</Description>
     <Description>
 $(Description)
 $(PACKAGE_RELEASE_NOTES)
     </Description>
-    <PackageTags>reactiveui, common, interactions, openfile, savefile, openfiledialog, savefiledialog, uwp, uno, wpf</PackageTags>
+    <PackageTags>reactiveui, common, interactions, openfile, savefile, openfiledialog, savefiledialog, messages, uwp, uno, wpf</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Label="Nuget">
