--- a/src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly/H.ReactiveUI.Apps.Uno.WebAssembly.csproj
+++ b/src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly/H.ReactiveUI.Apps.Uno.WebAssembly.csproj
@@ -23,7 +23,7 @@
     <LinkerDescriptor Include="LinkerConfig.xml" />
     <EmbeddedResource Include="WasmCSS\Fonts.css" />
     <EmbeddedResource Include="WasmScripts\AppManifest.js" />
-    <UpToDateCheckInput Include="..\..\..\H.ReactiveUI.Apps.Uno.Shared\**\*.xaml" />
+    <UpToDateCheckInput Include="..\..\H.ReactiveUI.Apps.Uno.Shared\**\*.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,8 +38,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
-    <ProjectReference Include="..\..\..\..\libs\H.ReactiveUI.CommonInteractions.Uno\H.ReactiveUI.CommonInteractions.Uno.csproj" />
+    <ProjectReference Include="..\..\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
+    <ProjectReference Include="..\..\..\libs\H.ReactiveUI.CommonInteractions.Uno\H.ReactiveUI.CommonInteractions.Uno.csproj" />
   </ItemGroup>
 
   <Import Project="..\..\H.ReactiveUI.Apps.Shared\H.ReactiveUI.Apps.Shared.projitems" Label="Shared" />
