--- a/src/apps/H.ReactiveUI.Apps.Avalonia/H.ReactiveUI.Apps.Avalonia.csproj
+++ b/src/apps/H.ReactiveUI.Apps.Avalonia/H.ReactiveUI.Apps.Avalonia.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
-    <ProjectReference Include="..\..\..\libs\H.ReactiveUI.CommonInteractions.Avalonia\H.ReactiveUI.CommonInteractions.Avalonia.csproj" />
+    <ProjectReference Include="..\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
+    <ProjectReference Include="..\..\libs\H.ReactiveUI.CommonInteractions.Avalonia\H.ReactiveUI.CommonInteractions.Avalonia.csproj" />
   </ItemGroup>
 
 </Project>
