--- a/src/apps/H.ReactiveUI.Apps.WinUI/H.ReactiveUI.Apps.WinUI.csproj
+++ b/src/apps/H.ReactiveUI.Apps.WinUI/H.ReactiveUI.Apps.WinUI.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
-    <ProjectReference Include="..\..\..\libs\H.ReactiveUI.CommonInteractions.WinUI\H.ReactiveUI.CommonInteractions.WinUI.csproj" />
+    <ProjectReference Include="..\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
+    <ProjectReference Include="..\..\libs\H.ReactiveUI.CommonInteractions.WinUI\H.ReactiveUI.CommonInteractions.WinUI.csproj" />
   </ItemGroup>
 
   <Import Project="..\H.ReactiveUI.Apps.Shared\H.ReactiveUI.Apps.Shared.projitems" Label="Shared" />
