--- a/src/apps/H.ReactiveUI.Apps.Wpf/H.ReactiveUI.Apps.Wpf.csproj
+++ b/src/apps/H.ReactiveUI.Apps.Wpf/H.ReactiveUI.Apps.Wpf.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
-    <ProjectReference Include="..\..\..\libs\H.ReactiveUI.CommonInteractions.Wpf\H.ReactiveUI.CommonInteractions.Wpf.csproj" />
+    <ProjectReference Include="..\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
+    <ProjectReference Include="..\..\libs\H.ReactiveUI.CommonInteractions.Wpf\H.ReactiveUI.CommonInteractions.Wpf.csproj" />
   </ItemGroup>
 
   <Import Project="..\H.ReactiveUI.Apps.Shared\H.ReactiveUI.Apps.Shared.projitems" Label="Shared" />
