--- a/src/libs/H.ReactiveUI.CommonInteractions.Wpf/H.ReactiveUI.CommonInteractions.Wpf.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Wpf/H.ReactiveUI.CommonInteractions.Wpf.csproj
@@ -3,9 +3,15 @@
   <PropertyGroup>
     <TargetFrameworks>net4.6.1;net5.0-windows;net6.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
+    <!-- For FolderBrowserDialog -->
+    <UseWindowsForms>true</UseWindowsForms>
     <DefineConstants>$(DefineConstants);HAS_WPF</DefineConstants>
     <NoWarn>$(NoWarn);CA5394;CA1822</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup Label="Usings">
+    <Using Remove="System.Windows.Forms"/>
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\H.ReactiveUI.CommonInteractions.Core\H.ReactiveUI.CommonInteractions.Core.csproj" />
