--- a/src/apps/Uno/H.ReactiveUI.Apps.Uno.Skia.Wpf.Host/H.ReactiveUI.Apps.Uno.Skia.Wpf.Host.csproj
+++ b/src/apps/Uno/H.ReactiveUI.Apps.Uno.Skia.Wpf.Host/H.ReactiveUI.Apps.Uno.Skia.Wpf.Host.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.0-dev.724" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.0-dev.724" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.8" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.8" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
 
   <ItemGroup>
