--- a/src/apps/Uno/H.ReactiveUI.Apps.Uno.Skia.Wpf/H.ReactiveUI.Apps.Uno.Skia.Wpf.csproj
+++ b/src/apps/Uno/H.ReactiveUI.Apps.Uno.Skia.Wpf/H.ReactiveUI.Apps.Uno.Skia.Wpf.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ReactiveUI.Uno" Version="17.1.17" />
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.0-dev.724" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.0-dev.724" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.0-dev.724" />
+    <PackageReference Include="ReactiveUI.Uno" Version="17.1.50" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.8" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.8" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.8" />
     <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.1.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
