--- a/src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly/H.ReactiveUI.Apps.Uno.WebAssembly.csproj
+++ b/src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly/H.ReactiveUI.Apps.Uno.WebAssembly.csproj
@@ -28,12 +28,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
-    <PackageReference Include="ReactiveUI.Uno" Version="17.1.17" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.0-dev.724" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.0-dev.724" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.0-dev.724" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0-dev.24" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0-dev.24" />
+    <PackageReference Include="ReactiveUI.Uno" Version="17.1.50" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.8" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.8" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.8" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0-dev.1" />
   </ItemGroup>
 
