fix: Fixed Uno targets.

--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -66,7 +66,7 @@ $(PACKAGE_RELEASE_NOTES)
   <PropertyGroup Label="Analyzers">
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <AnalysisLevel>latest</AnalysisLevel>
-    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <AnalysisMode>All</AnalysisMode>
   </PropertyGroup>
 
 </Project>
