--- a/src/libs/H.ReactiveUI.CommonInteractions.Uno/H.ReactiveUI.CommonInteractions.Uno.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Uno/H.ReactiveUI.CommonInteractions.Uno.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
 
   <PropertyGroup>
-    <!-- net6.0-ios;net6.0-android31.0;net6.0-macos;net6.0-maccatalyst;-->
-    <TargetFrameworks>netstandard2.0;MonoAndroid10.0;xamarinios10;xamarinmac20</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>$(TargetFrameworks);MonoAndroid11.0;xamarinios10;xamarinmac20</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
     <DefineConstants>$(DefineConstants);HAS_UNO</DefineConstants>
     <NoWarn>$(NoWarn);Uno0001;CA1822</NoWarn>
