--- a/src/libs/H.ReactiveUI.CommonInteractions.Avalonia/H.ReactiveUI.CommonInteractions.Avalonia.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Avalonia/H.ReactiveUI.CommonInteractions.Avalonia.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.10.13" />
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.13" />
-    <PackageReference Include="MessageBox.Avalonia" Version="2.0.0" />
+    <PackageReference Include="Avalonia" Version="0.10.15" />
+    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.15" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="MessageBox.Avalonia" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
