--- a/src/libs/H.ReactiveUI.CommonInteractions.Avalonia/H.ReactiveUI.CommonInteractions.Avalonia.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Avalonia/H.ReactiveUI.CommonInteractions.Avalonia.csproj
@@ -10,6 +10,11 @@
     <PackageReference Include="Avalonia" Version="0.10.15" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.15" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="MessageBox.Avalonia" Version="2.0.1" />
+    <PackageReference Include="DependencyPropertyGenerator" Version="0.33.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="DependencyPropertyGenerator.Core" Version="0.33.0" />
   </ItemGroup>
 
   <ItemGroup>
