--- a/src/libs/H.ReactiveUI.CommonInteractions.Uwp/H.ReactiveUI.CommonInteractions.Uwp.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Uwp/H.ReactiveUI.CommonInteractions.Uwp.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DependencyPropertyGenerator" Version="0.33.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="DependencyPropertyGenerator.Core" Version="0.33.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\H.ReactiveUI.CommonInteractions.Core\H.ReactiveUI.CommonInteractions.Core.csproj" />
   </ItemGroup>
 
