--- a/src/libs/H.ReactiveUI.CommonInteractions.WinUI/H.ReactiveUI.CommonInteractions.WinUI.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.WinUI/H.ReactiveUI.CommonInteractions.WinUI.csproj
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.1" />
+    <PackageReference Include="DependencyPropertyGenerator" Version="0.33.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="DependencyPropertyGenerator.Core" Version="0.33.0" />
   </ItemGroup>
 
   <ItemGroup>
