--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,3 +20,13 @@ jobs:
       windows-sdk-version: 18362
     secrets:
       nuget-key: ${{ secrets.NUGET_KEY }}
+
+  WebAssembly:
+    uses: HavenDV/workflows/.github/workflows/dotnet_build-test-publish.yml@main
+    with:
+      os: windows-2022
+      project-path: src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly
+      additional-dotnet-version: 5.0.x
+      deploy-web-assembly-path: src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly/bin/Release/net6.0/dist
+      generate-build-number: false
+      workloads: android ios maccatalyst macos
