feat: Updated NuGet packages.

--- a/src/libs/H.ReactiveUI.CommonInteractions.Avalonia/H.ReactiveUI.CommonInteractions.Avalonia.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Avalonia/H.ReactiveUI.CommonInteractions.Avalonia.csproj
@@ -7,14 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.10.16" />
-    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.16" Condition="'$(Configuration)' == 'Debug'" />
-    <PackageReference Include="MessageBox.Avalonia" Version="2.0.1" />
-    <PackageReference Include="DependencyPropertyGenerator" Version="0.36.3">
+    <PackageReference Include="Avalonia" Version="0.10.17" />
+    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.17" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="MessageBox.Avalonia" Version="2.0.2" />
+    <PackageReference Include="DependencyPropertyGenerator" Version="0.52.2">
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="DependencyPropertyGenerator.Core" Version="0.36.3" />
   </ItemGroup>
 
   <ItemGroup>
