--- a/src/libs/H.ReactiveUI.CommonInteractions.Wpf/H.ReactiveUI.CommonInteractions.Wpf.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Wpf/H.ReactiveUI.CommonInteractions.Wpf.csproj
@@ -14,11 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DependencyPropertyGenerator" Version="0.36.3">
+    <PackageReference Include="DependencyPropertyGenerator" Version="0.52.2">
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="DependencyPropertyGenerator.Core" Version="0.36.3" />
   </ItemGroup>
 
   <ItemGroup>
