--- a/src/libs/Mvvm.CommonInteractions.Uno/Mvvm.CommonInteractions.Uno.csproj
+++ b/src/libs/Mvvm.CommonInteractions.Uno/Mvvm.CommonInteractions.Uno.csproj
@@ -8,7 +8,7 @@
     <DefineConstants Condition="'$(TargetFramework)' == 'MonoAndroid11.0'">$(DefineConstants);HAS_UNO_MOBILE</DefineConstants>
     <DefineConstants Condition="'$(TargetFramework)' == 'xamarinios10'">$(DefineConstants);HAS_UNO_MOBILE</DefineConstants>
     <DefineConstants Condition="'$(TargetFramework)' == 'xamarinmac20'">$(DefineConstants);HAS_UNO_MOBILE</DefineConstants>
-    <NoWarn>$(NoWarn);Uno0001;CA1822</NoWarn>
+    <NoWarn>$(NoWarn);CA1822</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
