feat: Updated NuGet packages.

--- a/src/libs/Mvvm.CommonInteractions.Uno/Mvvm.CommonInteractions.Uno.csproj
+++ b/src/libs/Mvvm.CommonInteractions.Uno/Mvvm.CommonInteractions.Uno.csproj
@@ -12,12 +12,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="4.6.39" />
-    <PackageReference Include="DependencyPropertyGenerator" Version="1.0.3">
+    <PackageReference Include="Uno.UI" Version="4.7.44" />
+    <PackageReference Include="DependencyPropertyGenerator" Version="1.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
