--- a/src/apps/Mvvm.Apps.WinUI/Mvvm.Apps.WinUI.csproj
+++ b/src/apps/Mvvm.Apps.WinUI/Mvvm.Apps.WinUI.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows10.0.18362.0</TargetFramework>
+    <TargetFramework>net7.0-windows10.0.18362.0</TargetFramework>
     <Platforms>x86;x64;arm64</Platforms>
     <UseWinUI>true</UseWinUI>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <DefineConstants>$(DefineConstants);HAS_WINUI</DefineConstants>
     <!--<WindowsPackageType>None</WindowsPackageType>-->
     <NoWarn>$(NoWarn);CS8785</NoWarn>
@@ -20,12 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221209.1" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230217.4" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.25267-preview" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ViewBaseGenerator" Version="1.12.0">
+    <PackageReference Include="ViewBaseGenerator" Version="1.14.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
