--- a/src/apps/Mvvm.Apps.Wpf/Mvvm.Apps.Wpf.csproj
+++ b/src/apps/Mvvm.Apps.Wpf/Mvvm.Apps.Wpf.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFrameworks>net6.0-windows;net4.8</TargetFrameworks>
+    <TargetFrameworks>net7.0-windows;net4.8</TargetFrameworks>
     <UseWPF>true</UseWPF>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <DefineConstants>$(DefineConstants);HAS_WPF</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ViewBaseGenerator" Version="1.12.0">
+    <PackageReference Include="ViewBaseGenerator" Version="1.14.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
