--- a/src/libs/Mvvm.CommonInteractions.Avalonia/Mvvm.CommonInteractions.Avalonia.csproj
+++ b/src/libs/Mvvm.CommonInteractions.Avalonia/Mvvm.CommonInteractions.Avalonia.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net4.6.1;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
     <DefineConstants>$(DefineConstants);HAS_AVALONIA</DefineConstants>
     <NoWarn>$(NoWarn);CA5394;CA1822</NoWarn>
   </PropertyGroup>
