--- a/src/libs/Mvvm.CommonInteractions.Maui/Mvvm.CommonInteractions.Maui.csproj
+++ b/src/libs/Mvvm.CommonInteractions.Maui/Mvvm.CommonInteractions.Maui.csproj
@@ -1,26 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net7.0;net7.0-android;net7.0-ios;net7.0-maccatalyst;net7.0-windows10.0.19041.0</TargetFrameworks>
-    <TargetFrameworks Condition="'$(TF_BUILD)' == 'true'">$(TargetFrameworks);net7.0-tizen</TargetFrameworks>
+    <TargetFrameworks>net8.0;net8.0-android;net8.0-ios;net8.0-maccatalyst;net8.0-windows10.0.19041.0</TargetFrameworks>
+    <TargetFrameworks Condition="'$(TF_BUILD)' == 'true'">$(TargetFrameworks);net8.0-tizen</TargetFrameworks>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <UseMaui>true</UseMaui>
     <SingleProject>true</SingleProject>
     <SignAssembly>false</SignAssembly>
     <DefineConstants>$(DefineConstants);HAS_MAUI</DefineConstants>
-    <NoWarn>$(NoWarn);CA5394;CA1822</NoWarn>
-
-    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-    <CompilerGeneratedFilesOutputPath>$(BaseIntermediateOutputPath)\GeneratedFiles</CompilerGeneratedFilesOutputPath>
-
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
-    <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
+    <NoWarn>$(NoWarn);CA5394;CA1822;CA1418</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.3" />
     <PackageReference Include="DependencyPropertyGenerator" Version="1.3.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
