--- a/src/libs/Mvvm.CommonInteractions.WinUI/Mvvm.CommonInteractions.WinUI.csproj
+++ b/src/libs/Mvvm.CommonInteractions.WinUI/Mvvm.CommonInteractions.WinUI.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0-windows10.0.17763.0;net7.0-windows10.0.17763.0;</TargetFrameworks>
+    <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
     <UseWinUI>true</UseWinUI>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <GenerateLibraryLayout>true</GenerateLibraryLayout>
+    <EnableMsixTooling>true</EnableMsixTooling>
     <DefineConstants>$(DefineConstants);HAS_WINUI</DefineConstants>
-    <NoWarn>$(NoWarn);CA5394;CA1822</NoWarn>
+    <NoWarn>$(NoWarn);CA5394;CA1822;NETSDK1206</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
