--- a/src/libs/Mvvm.CommonInteractions.Wpf/Mvvm.CommonInteractions.Wpf.csproj
+++ b/src/libs/Mvvm.CommonInteractions.Wpf/Mvvm.CommonInteractions.Wpf.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net4.6.2;net6.0-windows;net7.0-windows</TargetFrameworks>
+    <TargetFrameworks>net4.6.2;net8.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <!-- For FolderBrowserDialog -->
     <UseWindowsForms>true</UseWindowsForms>
